// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostAttachments - Snapshots > matches snapshot with audios only 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-count="1"
    data-testid="post-attachments-audios"
  >
    Audios
  </div>
</div>
`;

exports[`PostAttachments - Snapshots > matches snapshot with empty attachments 1`] = `null`;

exports[`PostAttachments - Snapshots > matches snapshot with generic files only 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-count="1"
    data-testid="post-attachments-generic-files"
  >
    GenericFiles
  </div>
</div>
`;

exports[`PostAttachments - Snapshots > matches snapshot with images only 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-count="2"
    data-testid="post-attachments-images-and-videos"
  >
    ImagesAndVideos
  </div>
</div>
`;

exports[`PostAttachments - Snapshots > matches snapshot with local attachments only 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-count="1"
    data-testid="post-attachments-images-and-videos"
  >
    ImagesAndVideos
  </div>
  <div
    data-count="1"
    data-testid="post-attachments-audios"
  >
    Audios
  </div>
</div>
`;

exports[`PostAttachments - Snapshots > matches snapshot with mixed attachment types 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-count="2"
    data-testid="post-attachments-images-and-videos"
  >
    ImagesAndVideos
  </div>
  <div
    data-count="1"
    data-testid="post-attachments-audios"
  >
    Audios
  </div>
  <div
    data-count="1"
    data-testid="post-attachments-generic-files"
  >
    GenericFiles
  </div>
</div>
`;

exports[`PostAttachments - Snapshots > matches snapshot with mixed local attachment types 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-count="2"
    data-testid="post-attachments-images-and-videos"
  >
    ImagesAndVideos
  </div>
  <div
    data-count="1"
    data-testid="post-attachments-audios"
  >
    Audios
  </div>
  <div
    data-count="1"
    data-testid="post-attachments-generic-files"
  >
    GenericFiles
  </div>
</div>
`;

exports[`PostAttachments - Snapshots > matches snapshot with null attachments 1`] = `null`;

exports[`PostAttachments - Snapshots > matches snapshot with pending attachments 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    class="gap-3 sm:grid-cols-2"
    data-testid="container"
  >
    <div
      class="animate-pulse bg-muted h-52 w-full rounded-md sm:last:odd:col-span-2"
      data-slot="skeleton"
    />
    <div
      class="animate-pulse bg-muted h-52 w-full rounded-md sm:last:odd:col-span-2"
      data-slot="skeleton"
    />
  </div>
  <div
    class="animate-pulse bg-muted h-14 w-full rounded-md"
    data-slot="skeleton"
  />
</div>
`;

exports[`PostAttachments - Snapshots > matches snapshot with videos only 1`] = `
<div
  class="gap-3"
  data-testid="container"
>
  <div
    data-count="2"
    data-testid="post-attachments-images-and-videos"
  >
    ImagesAndVideos
  </div>
</div>
`;
